dim/spec/test_input/invalid_input/modules/yaml_syntax_invalid_char.dim
document: yaml_syntax_invalid_char

ESR-0010-4139:
  text: req1
